--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,61 @@
         height: 1.667em;
     }
     
+    .section-letter {
+        height: 100vh;
+        width: 100vw;
+        background-color: #FBC035;
+        text-align: center;
+        background-image: url("../img/send-bg.svg");
+        background-size: cover;
+        font-size: 1em;
+        padding: 1em 0;
+    }
+    
+    .section-letter-head {
+        margin-bottom: 1em;
+        font-weight: bold;
+        font-size: 1em;
+        line-height: 1.2em;
+        text-align: center;
+        color: #000000;
+    }
+    
+    .letter {
+        font-size: 1em;
+        height: 80%;
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        margin: 0 auto;
+        border: 0.575em solid transparent;
+        background: linear-gradient(#FEF6DF, #FEF6DF) padding-box, repeating-linear-gradient(-45deg, #CF5755 0, #CF5755 12.5%, #FEF6DF 0, #FEF6DF 25%, #5A799F 0, #5A799F 37.5%, #FEF6DF 0, #FEF6DF 50%) 0 / 5em 5em;
+    }
+    
+    .letter-input {
+        width: 80%;
+        height: 10%;
+        background: #FFFFFF;
+        border: 1px solid #D0D0D0;
+        box-sizing: border-box;
+        border-radius: 0.313em;
+    }
+    
+    .letter-input-user-message {
+        height: 45%;
+    }
+    
+    .letter-input-submit {
+        border: none;
+        background: linear-gradient(180deg, #FEF6DF 0%, #A4164A 100%);
+        box-shadow: 0.125em 0.125em 0.188em rgba(0, 0, 0, 0.25);
+        border-radius: 1.563em;
+        width: 6.250em;
+        height: 1.563em;
+    }
+    
     @media (min-width: 768px) {
         .header {
             height: 40vh;
